--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="icon" type="image/png" href="paw.png" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
